[package]
name = "ecc-acc-bls-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = "0.7.0"
ff = "0.12.0"
group = "0.12.0"
hex = "0.4.3"
proptest = "1.0.0"
subtle = "2.4.1"

[profile.dev]
opt-level = 3
strip = false
